--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -109,7 +109,9 @@ source:
 build:
   number: 0
   # some MKL issue for py 3.8 on osx-64
-  skip: True  # [py<38 or (py==38 and osx and x86_64)]
+  skip: true  # [py<38 or (py==38 and osx and x86_64)]
+  # Too many tests are failing on s390x.
+  skip: true  # [linux and s390x]
 
 requirements:
   build:
@@ -152,8 +154,6 @@ outputs:
       skip: true  # [py==38 and osx and x86_64]
       string: "h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"                                                  # [cuda_compiler_version == "None"]
       string: "cuda{{ cuda_compiler_version|replace(".", "") }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}_{{ faiss_proc_type }}"  # [cuda_compiler_version != "None"]
-      missing_dso_whitelist:  # [s390x]
-        - '$RPATH/ld64.so.1'  # [s390x]
       run_exports:
         # faiss follows SemVer, so restrict packages built with libfaiss to use
         # at least the same version at runtime, but below the next major version.
@@ -281,6 +281,8 @@ outputs:
         {% set skips = skips + " or (test_residual_quantizer and test_index_accuracy)" %}  # [aarch64 or ppc64le]
         # test_ivf_train_2level fails randomly on linux-64. Upstream recently increased the threshold. Tried that, but still failing occasionally.
         {% set skips = skips + " or test_ivf_train_2level" %}  # [linux and x86_64]
+        # Speed tests on aarch64 ocassionally take a bit longer than threshold (AssertionError: 0.10208797454833984 not less than 0.09767270088195801)
+        {% set skips = skips + " or test_PQ4_speed" %}  # [aarch64] 
         # the linux & windows CI agents support AVX2 (OSX doesn't yet), so by default,
         # we expect faiss will load the library with AVX2-support, see
         # https://github.com/facebookresearch/faiss/blob/v1.7.1/faiss/python/loader.py#L52-L66
