--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -185,6 +185,7 @@ outputs:
         - libopenblas            # [s390x or ppc64le or aarch64 or arm64] 
         - mkl 2023.1.*           # [not (s390x or ppc64le or aarch64 or arm64)]
         - {{ pin_compatible('intel-openmp') }}  # [linux64 or win]
+        - llvm-openmp  # [osx]
       run_constrained:
         - faiss-cpu ==9999999999  # [cuda_compiler_version != "None"]
         - faiss-gpu ==9999999999  # [cuda_compiler_version == "None"]
@@ -252,6 +253,7 @@ outputs:
         - {{ pin_compatible('numpy') }}
         - libopenblas            # [s390x or ppc64le or aarch64 or arm64]
         - mkl 2023.1.*           # [not (s390x or ppc64le or aarch64 or arm64)]
+        - llvm-openmp            # [osx]
       run_constrained:
         - faiss-cpu ==9999999999  # [cuda_compiler_version != "None"]
         - faiss-gpu ==9999999999  # [cuda_compiler_version == "None"]
@@ -281,8 +283,9 @@ outputs:
         {% set skips = skips + " or (test_residual_quantizer and test_index_accuracy)" %}  # [aarch64 or ppc64le]
         # test_ivf_train_2level fails randomly on linux-64. Upstream recently increased the threshold. Tried that, but still failing occasionally.
         {% set skips = skips + " or test_ivf_train_2level" %}  # [linux and x86_64]
-        # Speed tests on aarch64 ocassionally take a bit longer than threshold (AssertionError: 0.10208797454833984 not less than 0.09767270088195801)
-        {% set skips = skips + " or test_PQ4_speed" %}  # [aarch64] 
+        # Speed tests on aarch64 and arm64 ocassionally take a bit longer than threshold, e.g: (AssertionError: 0.10208797454833984 not less than 0.09767270088195801)
+        # These use openblas while upstream mentions MKL ensures the best speed.
+        {% set skips = skips + " or test_PQ4_speed" %}  # [aarch64 or arm64] 
         # the linux & windows CI agents support AVX2 (OSX doesn't yet), so by default,
         # we expect faiss will load the library with AVX2-support, see
         # https://github.com/facebookresearch/faiss/blob/v1.7.1/faiss/python/loader.py#L52-L66
