--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -129,6 +129,8 @@ outputs:
       # some MKL issue for py 3.8 on osx-64
       skip: true  # [py==38 and osx and x86_64]
       string: {{ faiss_proc_type }}
+    requirements:
+
     test:
       commands:
         - exit 0
@@ -333,13 +335,12 @@ about:
     possibly do not fit in RAM. It also contains supporting code for evaluation and
     parameter tuning. Faiss is written in C++ with complete wrappers for Python/numpy.
     Some of the most useful algorithms are implemented on the GPU. It is developed by
-    [Facebook AI Research](https://research.fb.com/category/facebook-ai-research-fair/).
+    Facebook AI Research.
 
     For best performance, the maintainers of the package
     [recommend](https://github.com/conda-forge/staged-recipes/pull/11337#issuecomment-623718460)
-    using the MKL implementation of blas/lapack. You can ensure that this is installed
-    by adding "libblas =*=*mkl" to your dependencies.
-  doc_url: https://rawgit.com/facebookresearch/faiss/master/docs/html/annotated.html
+    using the MKL implementation of blas/lapack.
+  doc_url: https://faiss.ai/
   dev_url: https://github.com/facebookresearch/faiss
 
 extra:
