--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -111,7 +111,7 @@ build:
   # some MKL issue for py 3.8 on osx-64
   skip: true  # [py<38 or (py==38 and osx and x86_64)]
   # Too many tests are failing on s390x.
-  skip: true  # [linux and s390x]
+  skip: true  # [linux and (s390x or ppc64le)]
 
 requirements:
   build:
@@ -120,6 +120,21 @@ requirements:
     - {{ compiler('cuda') }}  # [cuda_compiler_version != "None"]
     - patch  # [not win]
     - m2-patch  # [win]
+    - cmake
+    - ninja
+    # libgomp is required for linux-64 alongside intel-omp.
+    - libgomp                 # [linux]
+    # llvm-openmp is required only for osx
+    - llvm-openmp  14.0.6     # [osx]
+  host:
+    - python
+    # OpenBLAS + libgomp for osx-arm64, and linux-s390x and linux-ppc64le, linux-aarch64.
+    - openblas 0.3.21         # [s390x or ppc64le or aarch64 or arm64]
+    # MKL for win, linux-64, and osx-64. All require intel-openmp.
+    - mkl 2023.1.0            # [not (s390x or ppc64le or aarch64 or arm64)]
+    - intel-openmp            # [linux64 or win]
+    # mkl-devel seems to be required for win.
+    - mkl-devel 2023.1.0      # [win]
 
 outputs:
   # A meta-package to select CPU or GPU build for faiss.
